# finance-analyzer

./: .gitignore  .python-version  Makefile  exceptions.py  pyproject.toml
categories/: example.json
docs/: todo.md
models/: domain.py
src/: builder.py  calculator.py  classifier.py  domain.py  main.py  rate_fetcher.py
src/converters/: base.py  csv.py
src/loaders/: auto.py  base.py  credo.py
